@@ -23,6 +23,7 @@
 
 package net.sf.mpxj.mpp;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
@@ -60,7 +61,7 @@ final class TimephasedDataFactory
     */
    public List<TimephasedWork> getCompleteWork(ProjectCalendar calendar, ResourceAssignment resourceAssignment, byte[] data)
    {
-      LinkedList<TimephasedWork> list = new LinkedList<>();
+      List<TimephasedWork> list = new ArrayList<>();
 
       if (calendar != null && data != null && data.length > 2 && MPPUtility.getShort(data, 0) > 0)
       {
@@ -122,7 +123,7 @@ final class TimephasedDataFactory
                previousAssignment.setFinish(finish);
                if (previousAssignment.getStart().getTime() == previousAssignment.getFinish().getTime())
                {
-                  list.removeLast();
+                  list.remove(list.size() - 1);
                }
             }
 
@@ -140,7 +141,7 @@ final class TimephasedDataFactory
             previousAssignment.setFinish(finish);
             if (previousAssignment.getStart().getTime() == previousAssignment.getFinish().getTime())
             {
-               list.removeLast();
+               list.remove(list.size() - 1);
             }
          }
       }
@@ -163,7 +164,7 @@ final class TimephasedDataFactory
     */
    public List<TimephasedWork> getPlannedWork(ProjectCalendar calendar, Date startDate, double units, byte[] data, List<TimephasedWork> timephasedComplete, ResourceType resourceType)
    {
-      LinkedList<TimephasedWork> list = new LinkedList<>();
+      List<TimephasedWork> list = new ArrayList<>();
 
       if (calendar != null && data != null && data.length > 0)
       {
@@ -265,7 +266,7 @@ final class TimephasedDataFactory
                   previousAssignment.setFinish(finish);
                   if (previousAssignment.getStart().getTime() == previousAssignment.getFinish().getTime())
                   {
-                     list.removeLast();
+                     list.remove(list.size() - 1);
                   }
                }
 
@@ -285,7 +286,7 @@ final class TimephasedDataFactory
                previousAssignment.setFinish(finish);
                if (previousAssignment.getStart().getTime() == previousAssignment.getFinish().getTime())
                {
-                  list.removeLast();
+                  list.remove(list.size() - 1);
                }
             }
          }
